# upstream-prod

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  dbt_project.yml  profiles_example.yml  profiles_example_dbx.yml  profiles_example_sf.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
integration_tests/: README.md  create_symlinks.sh  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  profiles.yml.example  profiles_example_dbx.yml  profiles_example_sf.yml  run_db_tests.sh  run_env_schema_tests.sh  run_schema_tests.sh  run_tests.sh  run_tests_all_platforms.sh  test_all_projects.sh
integration_tests/dbt_project_files/: dev_db.yml  dev_db_dev_sch.yml  dev_db_env_sch.yml  dev_sch.yml  env_dbs.yml  env_sch.yml
integration_tests/dev_db/: dbt_project.yml  package-lock.yml  packages.yml  run_tests.sh
integration_tests/dev_db_dev_sch/: dbt_project.yml  package-lock.yml  run_tests.sh
integration_tests/dev_db_env_sch/: dbt_project.yml  packages.yml  run_tests.sh
integration_tests/dev_db_replace/: dbt_project.yml  package-lock.yml  run_tests.sh
integration_tests/dev_sch/: dbt_project.yml  run_tests.sh
integration_tests/env_db/: dbt_project.yml
integration_tests/env_sch/: dbt_project.yml  (+1 more)
macros/: add_node_to_check.sql  check_reqd_vars.sql  find_model_node.sql  find_selected_nodes.sql  get_node_timestamps.sql  get_prod_relation.sql  get_table_update_ts.sql  populate_cache.sql  query_table_last_altered.sql  raise_ref_not_found_error.sql  ref.sql
(+62 files in other folders)
