[project]
name = "upstream-prod"
version = "0.1.0"
description = "A dbt package for easily using production data in a development environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core>=1.5.0",
    "dbt-databricks>=1.5.0",
    "dbt-snowflake>=1.5.0",
    "ipdb>=0.13.13",
]
